# PluginSystemExample

./: CMakeLists.txt  LICENSE  README.md
cmake/: QtsPlugin.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/plugin-system/: CMakeLists.txt
src/plugin-system/base/: Array.h  BaseString.h  CMakeLists.txt  SharedPtr.h  UniquePtr.h  Vector.h
src/plugin-system/modules-interfaces/: CMakeLists.txt
src/plugin-system/modules-interfaces/graphics/: CMakeLists.txt  ICanvas2D.h  IGraphicsModule.h
src/plugin-system/modules-interfaces/mesh-loaders/: CMakeLists.txt  IMeshLoadersModule.h  IMeshParser.h  Mesh.h  Vector2.h  Vector3.h
src/plugin-system/plugin-base/: CMakeLists.txt  IPlugin.h  IPluginHandle.h  PluginInfo.h  Version.cpp  Version.h
src/plugin-system/plugin-loader/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.h
src/plugin-system/plugin-loader/unix/: CMakeLists.txt  UnixPluginHandle.cpp  UnixPluginHandle.h
src/plugin-system/plugin-loader/windows/: CMakeLists.txt  WindowsPluginHandle.cpp  WindowsPluginHandle.h
src/plugin-system/plugin-validator/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/mesh-loaders/: CMakeLists.txt  OBJParser.cpp  OBJParser.h  StandardMeshLoadersModule.cpp  StandardMeshLoadersModule.h  StandardMeshLoadersPlugin.cpp  StandardMeshLoadersPlugin.h
src/plugins/opengl-graphics/: CMakeLists.txt  OpenGLCanvas2D.cpp  OpenGLCanvas2D.h  OpenGLGraphicsModule.cpp  OpenGLGraphicsModule.h  OpenGLGraphicsPlugin.cpp  OpenGLGraphicsPlugin.h
src/plugins/plugin-sample/: CMakeLists.txt  InfoOnlyPlugin.cpp  InfoOnlyPlugin.h
